# cryosiam

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
cryosiam/: cli.py
cryosiam/.github/workflows/: conda-build-test.yml  github-release.yml  mkdocs-deploy.yml  pypi-publish.yml
cryosiam/apps/dense_simsiam_instance/: config.yaml  config_predict.yaml  config_test.yaml  create_patches.py  filtering_instances.py  module.py  predict.py  train.py  utils.py
cryosiam/apps/dense_simsiam_regression/: config.yaml  create_patches.py  module.py  predict.py  train.py  utils.py
cryosiam/apps/dense_simsiam_semantic/: __init__.py  config.yaml  config_predict.yaml  config_preprocess.yaml  config_test.yaml  create_patches.py  filter_ground_truth_labels.py  module.py  postprocessing.py  predict.py  prediction_postprocessing.py  semantic_prediction_to_center_points.py  train.py  utils.py
cryosiam/apps/preprocessing/: create_binary_map_after_sta.py  create_instance_map_after_sta.py  create_sphere_map_from_coordinates.py  match_pixel_size.py  revert_and_scale_intensity.py
cryosiam/apps/processing/: create_binary_map_after_sta.py  create_multi_class_mask_from_binary_masks.py  create_sphere_mask_from_coordinates.py  create_sphere_mask_from_coordinates_multiclass.py
cryosiam/apps/simsiam_prediction/: config_test.yaml  embeddings_kmeans_clustering.py  embeddings_spectral_clustering.py  extract_patches_embeddings.py  visualize_embeddings.py  (+1 more)
cryosiam/transforms/: __init__.py  array.py  dictionary.py
cryosiam/utils/: parser_helper.py
(+2 files in other folders)
